# compitum

./: Gemini.yaml  Makefile  README.md  bandit_src.json  benchmark_summary.txt  compitum.md  cosmic-ray.toml  generate_benchmark_summary.py  hypothesis.ini  pyproject.toml  pytest.ini  repo_snapshot.json  session.sqlite
benchmarks/: README.md  conftest.py  iso_utility_data_generator.py  test_constraints_rate.py  test_energy_drift.py  test_iso_utility_savings.py  test_orchestration_performance.py  test_regret_and_pareto.py  test_spd_and_energy_stability.py  test_throughput.py
configs/: constraints_us_default.yaml  router_defaults.yaml
examples/: __init__.py  bridge_demo.py  bridge_demo.tex  demo_route.py  synth_bench.py
reports/: compitum_feed.csv
scripts/: cr_pytest.cmd
src/compitum/: __init__.py  boundary.py  capabilities.py  cli.py  coherence.py  constraints.py  control.py  effort_qp.py  energy.py  metric.py  models.py  pgd.py  predictors.py  router.py  symbolic.py  utils.py
tests/: conftest.py  test_boundary.py  test_cli.py  test_coherence.py  test_constraints.py  test_control.py  test_effort_qp.py  test_energy.py  test_init.py  test_invariants.py  test_metric.py  test_models.py  test_pgd.py  test_predictors.py  test_router.py  test_symbolic.py  test_utils.py
tests/invariants/: __init__.py  harness.py  test_invariants_constraints.py  test_invariants_control.py  test_invariants_energy.py  test_invariants_metric.py  test_invariants_router.py  test_invariants_stateful_router.py
